--- a/index.html
+++ b/index.html
@@ -1,159 +1,152 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Blåhaj Café</title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="icon" href="assets/pfp.webp">
-      <meta name="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
-      <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
-      <!-- Schema.org for Google -->
-      <meta itemprop="name" content="Blåhaj Café">
-      <meta itemprop="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
-      <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
-      <meta name="og:title" content="Blåhaj Café">
-      <meta name="og:description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
-      <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
-      <meta name="og:url" content="https://girldick.estrogen.monster/">
-      <meta name="og:site_name" content="Blåhaj Café">
-      <meta name="og:locale" content="en_US">
-      <meta name="og:type" content="website">
-      <meta content="#dbc1ac" data-react-helmet="true" name="theme-color" />
-  </head>
-  <body>
-    <script>
-      function updateNews() {
-        // Fetch the JSON file
-        fetch('https://generalsphericaloctagon.mopigames20.repl.co/news.json')
-          .then(response => response.json()) // Parse it as JSON
-          .then(data => {
-            // Access the content and time properties
-            let content = data[0].content;
-            const time = new Date(data[0].time).toLocaleString();
-            let sender = data[0].sender;
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blåhaj Café</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="assets/pfp.webp">
+  <meta name="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+  <meta itemprop="name" content="Blåhaj Café">
+  <meta itemprop="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+  <meta name="og:title" content="Blåhaj Café">
+  <meta name="og:description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+  <meta name="og:url" content="https://girldick.estrogen.monster/">
+  <meta name="og:site_name" content="Blåhaj Café">
+  <meta name="og:locale" content="en_US">
+  <meta name="og:type" content="website">
+  <meta content="#dbc1ac" data-react-helmet="true" name="theme-color" />
+</head>
+<body>
+  <script>
+    function updateNews() {
+      fetch('https://generalsphericaloctagon.mopigames20.repl.co/news.json')
+        .then(response => response.json())
+        .then(data => {
+          let content = data[0].content;
+          const time = new Date(data[0].time).toLocaleString();
+          let sender = data[0].sender;
 
-            // Cut the message if it exceeds 500 characters
-            if (content.length > 500) {
-              content = content.substring(0, 500) + '...';
-            }
+          if (content.length > 500) {
+            content = content.substring(0, 500) + '...';
+          }
 
-            // Update the HTML content
-            document.querySelector('.news').textContent = `${content} (Posted on ${time} by ${sender})`;
-          })
-          .catch(error => console.error('Error:', error));
-      }
+          document.querySelector('.news').textContent = `${content} (Posted on ${time} by ${sender})`;
+        })
+        .catch(error => console.error('Error:', error));
+    }
 
-      // Update the news every 5 seconds
-      setInterval(updateNews, 3000);
-    </script>
-      <div class="snowflakes" aria-hidden="true">
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-        </div>
-        
-      <div class="container">
-          <div class="pfpdiv">
-              <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
-              <div class="bio">
-                  <h1>Welcome to <span style="color: #dbc1ac !important;"><bold>Blåhaj Café</bold></span>!</h1>
-                  <h4 style="font-family: homemade_appleregular;">Come and take a seat!~</h4>
-              </div>
-          </div>
-          <br>
-          <div class="boxes-container">
-              <div class="boxes" >
-                  <h1 style="font-family: _i_love_glitterregular;">Join us!</h1>
-                  <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-              </div>
-              <div class="boxes">
-                  <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
-                  <h4>Here's the last ping from the server in the announcements channel!</h4>
-                  <p class="news">Loading...</p>
-              </div>
-              <div class="boxes">
-                  <h1 style="font-family: _i_love_glitterregular;">The server</h1>
-                  <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
-                  <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
-                  <h4>• Blåhaj Café Staff</h4>
-                  <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
-              </div>
-              <div class="boxes">
-                  <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
-                  <div class="containertrans">
-                      <div id="blue"></div>
-                      <div id="pink"></div>
-                      <div id="white"></div>
-                      <div id="pink"></div>
-                      <div id="blue"></div>
-                  </div>
-              </div>
-              <div class="boxes">
-                  <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
-                  <h4>Here is each role on our staff team, and how they are here to help you!</h4>
-                  <p>~The Founder~</p>
-                  <p>Creator of the server, report instances of admin abuse or server recommendations to her</p>
-                  <p>~The Administrators~</p>
-                  <p>High level staff who oversee all other mods and have high level permissions on the server, escalate matters to them if necessary</p>
-                  <p>~The Moderators~</p>
-                  <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc., usually you want to address any concerns with them first</p>
-                  <p>~The Jr. Moderators~</p>
-                  <p>Entry level stuff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
-              </div>
-              <div class="boxes">
-                <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
-              </div>
-              <div class="boxes">
-                <h1 style="font-family: _i_love_glitterregular;">Tone tags</h1>
-                <p>Here's a non exhaustive list of tone tags:</p>
-                <p>/j = joking</p>
-                <p>/s = sarcasm</p>
-                <p>/hj = half joking</p>
-                <p>/srs = serious</p>
-                <p>/lh = light hearted</p>
-                <p>/gen = genuine</p>
-                <p>/pos = positive</p>
-                <p>/neg = negative</p>
-                <form action="https://tone-tag-list.carrd.co/#masterlist" method="get" target="_blank">
-                  <button class="button" type="submit">More tone tags</button>
-                </form>
-              </div>
-          </div>
+    setInterval(updateNews, 3000);
+  </script>
+  <div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+    <div class="snowflake">
+      ❅
+    </div>
+    <div class="snowflake">
+      ❆
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="pfpdiv">
+      <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
+      <div class="bio">
+        <h1>Welcome to <span style="color: #dbc1ac !important;"><bold>Blåhaj Café</bold></span>!</h1>
+        <h4 style="font-family: homemade_appleregular;">Come and take a seat!~</h4>
       </div>
-  </body>
+    </div>
+    <br>
+    <div class="boxes-container">
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Join us!</h1>
+        <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
+        <h4>Here's the last ping from the server in the announcements channel!</h4>
+        <p class="news">Loading...</p>
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">The server</h1>
+        <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
+        <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
+        <h4>• Blåhaj Café Staff</h4>
+        <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
+        <div class="containertrans">
+          <div id="blue"></div>
+          <div id="pink"></div>
+          <div id="white"></div>
+          <div id="pink"></div>
+          <div id="blue"></div>
+        </div>
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
+        <h4>Here is each role on our staff team, and how they are here to help you!</h4>
+        <p>~The Founder~</p>
+        <p>Creator of the server, report instances of admin abuse or server recommendations to her</p>
+        <p>~The Administrators~</p>
+        <p>High level staff who oversee all other mods and have high level permissions on the server, escalate matters to them if necessary</p>
+        <p>~The Moderators~</p>
+        <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc., usually you want to address any concerns with them first</p>
+        <p>~The Jr. Moderators~</p>
+        <p>Entry level stuff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
+      </div>
+      <div class="boxes">
+        <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
+      </div>
+      <div class="boxes">
+        <h1 style="font-family: _i_love_glitterregular;">Tone tags</h1>
+        <p>Here's a non exhaustive list of tone tags:</p>
+        <p>/j = joking</p>
+        <p>/s = sarcasm</p>
+        <p>/hj = half joking</p>
+        <p>/srs = serious</p>
+        <p>/lh = light hearted</p>
+        <p>/gen = genuine</p>
+        <p>/pos = positive</p>
+        <p>/neg = negative</p>
+        <form action="https://tone-tag-list.carrd.co/#masterlist" method="get" target="_blank">
+          <button class="button" type="submit">More tone tags</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
